--- a/main.tex
+++ b/main.tex
@@ -292,7 +292,7 @@ Luego veremos bien el formato, esto de momento es para tener un esqueleto.
         \\ edr.aula[a.coord.f][a.coord.c] = \langle \rangle \land
         \\ \paraTodo {c1}{Coordenada} {coordenadaValida(c1, edr.aula) \yLuego c1 \neq a.coord \implicaLuego edr.aula[c1.f][c1.c] = edr0.aula[c1.f][c1.c]} \yLuego
         \\ edr.solucion = edr0.solucion
-        }
+    }
     
 
 \end{proc}
@@ -320,12 +320,21 @@ Luego veremos bien el formato, esto de momento es para tener un esqueleto.
     \requiere{True}
     \aseguraLargo{
         % Cambiar como le paso las coordenadas: \paraTodo{c}{Coordenada}{coordenadaValida(c, edr.aula)}
-        \paraTodo{i, j}{\Z}{(coordenadaValida(i, j, edr.Aula) \yLuego \neg (pertenece(edr[i][j], l))) \implicaLuego
-        \\ \paraTodo{k}{\Z}{0 \leq k < \norm{res} \implicaLuego res[k] = \tupla{edr[i][j], nota(edr[i][j], edr.s])}}}
-        }
+        \paraTodo{c}{Coordenada}{(coordenadaValida(c, edr.aula) \yLuego \neg (pertenece(edr.aula[c.x][c.y], l))) \implicaLuego
+        \paraTodo{k}{\Z}{0 \leq k < \norm{res} \implicaLuego res[k] = \tupla{edr.aula[c.x][c.y], nota(edr.aula[c.x][c.y], edr.s)}}}
+    }
 \end{proc}
 
-% Agregar pred pertenece y pred nota
+% Agregar pred pertenece y aux nota
+
+\predLargo{pertenece}{a: Alumno, l: \seq{Alumno}}{
+    \paraTodo{i}{\Z}{0 \leq i < \norm{l} \implicaLuego l[i] = a}
+}
+
+% Suma todas las respuestas correctas, lo divide por la cantidad de respuestas y lo multiplica por 10 (standar)
+\aux{nota}{a: Alumno, s: Paso}{\Z}
+    \\ $((\sum_{i=0}^{\norm{s}}ifThenElse(a.examen[\norm{examen} - 1][i] = s[i], 1, 0)) \ / \ \norm{s}) \cdot 10$
+
 
 \end{tad}
 
